--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -10,26 +10,27 @@
 \begin{cventries}
 
   \cventry
-    {Head of API Governance - SVP} % Job title
+    {Engineering manager - Director of Innovation} % Job title
     {FWD} % Organization
     {Bangkok - Thailand} % Location
     {Jan. 2019 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Increase the team agility and increase the delivery cycle to daily release}
+        \item {Build and release the first Conversation AI Digital Avatar with insurance knowledges}
+        \item {Assist customers to visualize their retirement lifestyle through a unique Virtual Reality platform}
         \item {Build and deliver the first OPEN INSURANCE platform in thailand}
         \item {Contribute to the API first enterprise vision}
         \item {Enabling the Business Api as a product}
-        \item {Setup the API team}
+        \item {Setup and lead the API team}
         \item {Share the concept of business API design}
         \item {Redesign the overall Api architecture around 3 main principles : data, security and developer experience}
         \item {Redesign and standardize the registration/login flow}
         \item {Build the Developer Api Portal}
         \item {Improve the api security}
-        \item {Design the microservice architecture}
-        \item {Setup the enterprise Devop capability}
-        \item {Built fully automated CI/CD pipelines on GoCd for critical components from dev to prod}
-        \item {---}
-        \item {Web Platform: http://developer.scblife.co.th}
+        \item {Design the microservice architecture in order to modernize the legacy system}
+        \item {Setup the enterprise Devop capability and increase the team knowledge}
+        \item {Built fully automated CI/CD pipelines for critical components from dev to prod}
       \end{cvitems}
     }
     {
@@ -118,8 +119,6 @@
         \item {Deploy a centralized monitoring environment(AppMetrics, Grafana, prometheus) which gather system metrics.}
         \item {Promote the data driven practice by leveraging the big data platform to monitor the api performance and suspicious request}
         \item {Build an extreme confidence within the team to release at any moment}
-        \item {---}
-        \item {Web Platform: http://api.krungthai-axa.co.th}
       \end{cvitems}
     }
     {
@@ -151,7 +150,7 @@
   \cventry
     {Technical Lead - Scrum Master} % Job title
     {Palo-It} % Organization
-    {Singapore \& Bangkok - Thailand} % Location
+    {Singapore} % Location
     {Aug. 2015 - Sept. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
