--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -15,39 +15,13 @@
     {In service} % Location
     {2018} % Date(s)
   \cvhonor
-    {atalent-consulting.com} % link
-    {Business presentation website. \#Javascript \#mailchimp}
+    {atalent-labs} % link
+    {Collection of Open source Continuous integration tool. \#Devops \#automation #github-action}
     {In service} % Location
-    {2018} % Date(s)
+    {2019} % Date(s)
   \cvhonor
-    {gh-cv-assistant.olivierodo.me} % Position
-    {A friendly Github bot that helps keeping your resume up to date. \#Gihub bot,\#NodeJs,\#Firebase, \#Docker}
-    {Out of service} % Location
-    {2018} % Date(s)
-%---------------------------------------------------------
-%  \cvhonor
-%    {linassist.com} % Position
-%    {Line bot connector (Line, slack, salesforce, NodeJs, mongoDb, docker)}
-%    {In service} % Location
-%    {2017} % Date(s)
-%---------------------------------------------------------
-  \cvhonor
-    {Bolibot.io} % Position
-    {Translation Slack bot.  \#Slack \#NodeJs \#googleApi \#Firebase \#Docker \#Heroku}
-    {Out of service} % Location
-    {2016} % Date(s)
-%---------------------------------------------------------
-  \cvhonor
-    {Cookinky.com} % Position
-    {Bio recipe sharing platform. \#Php \#Symfony \#RabbitMq \#NodeJs  \#Docker \#Aws \#Mysql \#ElasticSearch}
-    {Out of service} % Location
-    {2014} % Date(s)
-%---------------------------------------------------------
-  \cvhonor
-    {Vaniadiary.com} % Position
-    {HairDress salon managment tool. \#Php \#Symfony \#RabbitMq \#NodeJs \#Aws \#Mysql \#Ldap}
-    {Out of service} % Location
-    {2013} % Date(s)
-
-%---------------------------------------------------------
+    {MV Podcast} % Position
+    {A Co-Host French podcast focusing on the soft skill required by the developers. \#Podcast \#developer \#softSkills \#French}
+    {In service} % Location
+    {2023} % Date(s)
 \end{cvhonors}
