--- a/resume/education.tex
+++ b/resume/education.tex
@@ -54,7 +54,7 @@
       \begin{cvitems} % Description(s) bullet points
         \item {French Native}
         \item {English Fluent}
-        \item {Thai Beginner}
+        \item {Thai Intermediate}
         \item {Agile Fluent}
       \end{cvitems}
     }
