--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -16,7 +16,7 @@
     {2018} % Date(s)
   \cvhonor
     {atalent-labs} % link
-    {Collection of Open source Continuous integration tool. \#Devops \#automation #github-action}
+    {Collection of Open source Continuous integration tool. \#Devops \#automation \#github-action}
     {In service} % Location
     {2019} % Date(s)
   \cvhonor
