--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -21,7 +21,7 @@
     {2019} % Date(s)
   \cvhonor
     {MV Podcast} % Position
-    {A Co-Host French podcast focusing on the soft skill required by the developers. \#Podcast \#developer \#softSkills \#French}
+    {A Co-Hosted French podcast focusing on the soft skill required by the developers. \#Podcast \#developer \#softSkills \#French}
     {In service} % Location
     {2023} % Date(s)
 \end{cvhonors}
