--- a/resume/education.tex
+++ b/resume/education.tex
@@ -11,7 +11,7 @@
   \cventry
     {Certified Kubernetes Application Developer (CKAD)} % Degree
     {CNCF} % Institution
-    {Bangkok, France} % Location
+    {Bangkok, Thailand} % Location
     {2021} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
